count sort comptime way @returns new array
Signed-off-by: Aryan Suri <arysuri@proton.me>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,6 @@ Next update <0.0.02> is Graph structure
 & AVL Tree
 & Trie
 
-version 0.0.02-alpha@b6a86ad
+version 0.0.02-alpha@
 ------------------------
 Implemented Graph data structure
